Fixing margin around video on mobile.

--- a/shared/style.css
+++ b/shared/style.css
@@ -456,4 +456,8 @@ footer .radbound_umc_logo span {
 	.important {
 		margin: 0 20px !important;
 	}
+    video {
+        margin: 10px 20px;
+        max-width: 90%!important; 
+    }
 }
